--- a/view/thanks.html
+++ b/view/thanks.html
@@ -22,62 +22,29 @@
 		
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
-		<style type="text/css">
-		body {
-			padding-top: 20px;
-			padding-bottom: 40px;
-		}
+		<link type="text/css" href="assets/css/page.css" rel="stylesheet" />
 		
-		/* Custom container */
-		.container-narrow {
-			margin: 0 auto;
-			max-width: 700px;
-		}
-		.container-narrow > hr {
-			margin: 30px 0;
-		}
-		
-		/* Main marketing message and sign up button */
-		.jumbotron {
-			margin: 60px 0;
-			text-align: center;
-		}
-		.jumbotron h1 {
-			font-size: 60px;
-			line-height: 1;
-		}
-		.jumbotron .btn {
-			font-size: 21px;
-			padding: 14px 24px;
-		}
-		
-		/* Supporting marketing content */
-		.marketing {
-			margin: 60px 0;
-		}
-		.marketing p + h4 {
-			margin-top: 28px;
-		}
-		</style>
 		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container-narrow">
-			<div class="masthead">
-				<ul class="nav nav-pills pull-right">
-					<li><a href="/">Home</a></li>
-					<li><a href="/about">About</a></li>
-					<li class="dropdown">
-						<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact</a>
-						<ul class="dropdown-menu">
-							<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
-							<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
-							<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
-						</ul>
-					</li>
-				</ul>
-				<h3 class="muted">PollEndpoint</h3>
+			<div class="navbar navbar-static-top">
+				<div class="navbar-inner">
+					<a class="brand" href="/">PollEndpoint</a>
+					<ul class="nav">
+						<li><a href="/">Home</a></li>
+						<li><a href="/about">About</a></li>
+						<li class="dropdown">
+							<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact <i class="carat"></i></a>
+							<ul class="dropdown-menu">
+								<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
+								<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
+								<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
 		<hr>
 		<div class="jumbotron">
