--- a/view/create.html
+++ b/view/create.html
@@ -2,161 +2,45 @@
 <html>
 	<head>
 		<title>PollEndpoint</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f"></meta>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="Keywords" content="questionnaire,free,open-source,online questionnaire,online polls,platform,pollendpoint,high performance,easy to use, node.js,system,mobile compatible,responsive design,clean" />
+		<meta name="description" content="PollEndpoint is a free, open-source questionnaire platform created by Licson Lee that is easy to use and fast. It's also compatible with mobile browsers that makes your questionnaires available in more platforms." />
+		<meta name="author" content="Licson Lee" />
+		<meta name="application-name" content="PollEndpoint" />
+		<meta name="google-translate-customization" content="77fe593d432fcb9f-a556272c9dd07368-g8054283e1127bbec-1f" />
 		<link type="text/css" href="assets/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link type="text/css" href="assets/css/jquery.tagsinput.css" rel="stylesheet">
-		<style type="text/css">
-		body {
-			padding-top: 20px;
-			padding-bottom: 40px;
-		}
+		<link type="text/css" href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link type="text/css" href="assets/css/page.css" rel="stylesheet">
 		
-		/* Custom container */
-		.container-narrow {
-			margin: 0 auto;
-			max-width: 700px;
-		}
-		.container-narrow > hr {
-			margin: 30px 0;
-		}
-		
-		/* Main marketing message and sign up button */
-		.jumbotron {
-			margin: 60px 0;
-			text-align: center;
-		}
-		.jumbotron h1 {
-			font-size: 60px;
-			line-height: 1;
-		}
-		.jumbotron .btn {
-			font-size: 21px;
-			padding: 14px 24px;
-		}
-		
-		/* Supporting marketing content */
-		.marketing {
-			margin: 60px 0;
-		}
-		.marketing p + h4 {
-			margin-top: 28px;
-		}
-		</style>
 		<script type="text/javascript" src="assets/js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.form.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.tagsinput.min.js"></script>
-		<script>
-		$(function(){
-			var id;
-			var step_1_completed = false, step_2_completed = false;
-			$('#question_form').validate();
-			$('input,select[title]').tooltip();
-			$('#status .alert .close').click(function(){
-				$('#status .alert').hide(500);
-			});
-			$('#basic_info').ajaxForm({
-				dataType:'json',
-				success:function(response){
-					if(response.success){
-						id = response.id;
-						$('.p_id').val(response.id);
-						step_1_completed = true;
-						$('#ques_dialog').modal('show');
-					}
-					else {
-						$('#status .alert .message').text(response.message);
-						$('#status .alert').show(500);
-					}
-				}
-			});
-			$('#proceed_2').click(function(){
-				if(step_1_completed){
-					if($('#question_form').valid()){
-						$('#question_form').ajaxSubmit({
-							dataType:'json',
-							beforeSend:function(){
-								$('#ques_dialog .modal-body div:first').slideUp(500);
-								$('#ques_dialog .modal-body div:last').slideDown(500);
-							},
-							success:function(response){
-								if(response.success){
-									step_2_completed = true;
-									$('html,body').animate({scrollTop:0},500);
-									$('#ques_dialog').modal('hide');
-								}
-								else {
-									$('#status .alert .message').text(response.message);
-									$('#status .alert').show(500);
-									$('#ques_dialog').modal('hide');
-								}
-							}
-						});
-					}
-					else {
-						$('#status .alert .message').text('Please set the questions properly.');
-						$('#status .alert').show(500);
-						$('#ques_dialog').modal('hide');
-					}
-				}
-				else {
-					$('#status .alert .message').text('Please complete step 1 first.');
-					$('#status .alert').show(500);
-					$('#ques_dialog').modal('hide');
-				}
-			});
-			$('#send').click(function(e){
-				if(step_1_completed && step_2_completed){
-					window.location.href = "/question/"+id+'?created=1';
-				}
-				else {
-					$('#status .alert .message').text('Please complete step 1 and 2 first.');
-					$('#status .alert').show(500);
-				}
-			});
-			$('#add').click(function(){
-				$('.question:last')
-					.clone()
-					.find("input['questions[name]']")
-					.val('')
-					.end()
-					.appendTo('#question_sets')
-					.find('.tagsinput')
-					.remove();
-				
-				$('.tags:last').tagsInput();
-				$('.p_id').val(id);
-				$('#question_form').validate();
-			});
-			$(window).on('beforeunload',function(e){
-				if(!window.confirm('Are you sure you want to leave?')){
-					e.preventDefault();
-				}
-			});
-			$('.tags:first,#basic_info input[name=keywords]').tagsInput();
-		});
-		</script>
+		<script type="text/javascript" src="assets/js/jquery.expose.min.js"></script>
+		<script type="text/javascript" src="assets/js/page_create.js"></script>
 	</head>
 	<body>
 		<div class="container-narrow">
-			<div class="masthead">
-				<ul class="nav nav-pills pull-right">
-					<li><a href="/">Home</a></li>
-					<li><a href="/about">About</a></li>
-					<li class="dropdown">
-						<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact</a>
-						<ul class="dropdown-menu">
-							<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
-							<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
-							<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
-						</ul>
-					</li>
-				</ul>
-				<h3 class="muted">PollEndpoint</h3>
+			<div class="navbar navbar-static-top">
+				<div class="navbar-inner">
+					<a class="brand" href="/">PollEndpoint</a>
+					<ul class="nav">
+						<li><a href="/">Home</a></li>
+						<li><a href="/about">About</a></li>
+						<li class="dropdown">
+							<a href="mailto:licson0729@gmail.com" data-toggle="dropdown">Contact <i class="carat"></i></a>
+							<ul class="dropdown-menu">
+								<li><a href="https://www.facebook.com/pages/Pollendpoint/487395521320925">Facebook page</a></li>
+								<li><a href="https://github.com/licson0729/PollEndpoint">Github repo</a></li>
+								<li><a href="mailto:licson0729@gmail.com?subject=PollEndpoint%20enquiries">Contact me</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
 		<hr>
 		<div class="jumbotron">
@@ -189,48 +73,45 @@
 			<div class="span4">
 				<h4>Step 3</h4>
 				<p>Submit your poll</p>
-				<button class="btn" id="send">Submit</button>
+				<button class="btn" id="send" title="Hey!" data-content="Click here to submit!">Submit</button>
 			</div>
 		</div>
-		<hr>
-		<div>
-			<div class="modal hide fade" id="ques_dialog">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h3>Set the questions</h3>
-				</div>
-				<div class="modal-body">
-					<div>
-						<button id="add" class="btn pull-right">Add questions</button>
-						<form action="/create/save/questions" method="POST" id="question_form">
-							<div id="question_sets">
-								<div class="question well">
-									<input type="hidden" value="" name="questions[belongs]" class="p_id required"/>
-									<label>Title 
-										<input name="questions[name]" type="text" placeholder="Name of the question" title="Name of the question" class="required" />
-									</label>
-									<label>Type of the question 
-										<select name="questions[type]" title="Type of question" class="required">
-											<option value="fillin">Fill in the blanks</option>
-											<option value="mc">Multiple Choices</option>
-											<option value="mmc">Multiple Answers</option>
-										</select>
-									</label>
-									<label>Choices (Only for Multiple Choices and Multiple Answers) 
-										<input type="text" name="questions[choices]" placeholder="Choices" title="Type in each choice and press enter to enter another choice." class="tags" />
-									</label>
-									<label>Required 
-										<input type="checkbox" name="questions[required]" value="1" checked class="required"/>
-									</label>
-								</div>
+		<div class="modal hide fade" id="ques_dialog">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h3>Set the questions</h3>
+			</div>
+			<div class="modal-body">
+				<div>
+					<button id="add" class="btn pull-right">Add questions</button>
+					<form action="/create/save/questions" method="POST" id="question_form">
+						<div id="question_sets">
+							<div class="question well">
+								<input type="hidden" value="" name="questions[belongs]" class="p_id required"/>
+								<label>Title 
+									<input name="questions[name]" type="text" placeholder="Name of the question" title="Name of the question" class="required" />
+								</label>
+								<label>Type of the question 
+									<select name="questions[type]" title="Type of question" class="required">
+										<option value="fillin">Fill in the blanks</option>
+										<option value="mc">Multiple Choices</option>
+										<option value="mmc">Multiple Answers</option>
+									</select>
+								</label>
+								<label>Choices (Only for Multiple Choices and Multiple Answers) 
+									<input type="text" name="questions[choices]" placeholder="Choices" title="Type in each choice and press enter to enter another choice." class="tags" />
+								</label>
+								<label>Required 
+									<input type="checkbox" name="questions[required]" value="1" checked class="required"/>
+								</label>
 							</div>
-						</form>
-					</div>
-					<div style="display:none;">Please wait...</div>
+						</div>
+					</form>
 				</div>
-				<div class="modal-footer">
-					<a href="#" id="proceed_2" class="btn">Proceed</a>
-				</div>
+				<div style="display:none;">Please wait...</div>
+			</div>
+			<div class="modal-footer">
+				<a href="#" id="proceed_2" class="btn">Proceed</a>
 			</div>
 		</div>
 		<hr>
